--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale: en-US
 title: "Scott Bouloutian"
 description: "Software Engineer · Hacker · Entrepreneur"
 baseurl: "/" # the subpath of your site, e.g. "/blog"
-url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url: "https://scottbouloutian.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 logo: "/images/site-logo.png" # path of site logo, e.g. "/assets/images/logo.png"
 date_format: "%B %-d, %Y"
 read_time: true
