--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 remote_theme: mmistakes/so-simple-theme
-# remote_theme: mmistakes/so-simple-theme
 locale: en-US
 title: "Scott Bouloutian"
 description: "Software Engineer · Hacker · Entrepreneur"
-baseurl: "/" # the subpath of your site, e.g. "/blog"
-url: "https://scottbouloutian.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl: "/"
+url: "https://scottbouloutian.com"
 logo: "/images/site-logo.png" # path of site logo, e.g. "/assets/images/logo.png"
 date_format: "%B %-d, %Y"
 read_time: true
