add git to dev container

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,5 @@
 FROM jekyll/jekyll
 
+RUN apk add openssh
 RUN git config --global user.email "ScottBouloutian@gmail.com" \
     && git config --global user.name "Scott Bouloutian"
