--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,5 +8,6 @@
     "postCreateCommand": "bundle install",
     "extensions": [
         "dbaeumer.vscode-eslint"
-    ]
+    ],
+    "runArgs": ["-v", "${env:HOME}/.ssh:/root/.ssh"]
 }
