--- a/_config.yml
+++ b/_config.yml
@@ -8,18 +8,14 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-remote_theme: mmistakes/so-simple-theme
+remote_theme: "mmistakes/so-simple-theme@3.2.0"
 locale: en-US
 title: "Scott Bouloutian"
 description: "Software Engineer · Hacker · Entrepreneur"
 baseurl: "/"
 url: "https://scottbouloutian.com"
 logo: "/images/site-logo.png"
+skin: "/assets/css/skins/default.css"
 date_format: "%B %-d, %Y"
 read_time: true
 words_per_minute: 200
