--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ minimal_mistakes_skin: "mint"
 locale: "en-US"
 
 # Build settings
-theme: minimal-mistakes-jekyll
+remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 plugins:
   - jekyll-feed
   - jekyll-include-cache
